# bounding_box_annotation_flutter

backend/: .gitignore  README.md  build.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
backend/rust/: Cargo.toml
backend/rust/src/: lib.rs
backend/schemas/: input.sql  schema.sql
backend/scripts/: build.sh  set_cors_header.py
backend/src/: client_models.ts  database_model.ts  database_models.ts  errors.ts  index.ts
client/: pubspec.yaml
client/android/app/: build.gradle
client/android/app/src/main/: AndroidManifest.xml
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: main.dart
client/lib/src/: app.dart  constants.dart  persistence.dart  routes.dart  settings_page.dart  unsubmitted_jobs_sliver.dart
client/lib/src/annotation/: annotate_page.dart  annotation.dart  annotation.freezed.dart  annotation.g.dart  annotation_local_repository.dart  annotation_network_repository.dart  annotation_service.dart  annotations_page.dart  bounding_box_widget.dart
client/lib/src/connectivity/: check_internet.dart  check_internet_flutter.dart  check_internet_hooks.dart  connectivity.dart
client/lib/src/home/: annotations_jobs_sliver.dart  annotations_sliver.dart  home_page.dart
client/lib/src/utilities/: error_alert_dialog.dart
client/lib/src/widgets/: annotation_widget.dart  app_bar_title.dart
client/linux/: CMakeLists.txt  my_application.cc
client/macos/Runner.xcodeproj/: project.pbxproj
client/macos/Runner/Configs/: AppInfo.xcconfig
client/scripts/: codegen.sh
client/web/: manifest.json
client/windows/: CMakeLists.txt
mobile/: README.md  local.properties
mobile/android/app/: build.gradle
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/src/: app.dart  constants.dart  routes.dart
mobile/lib/src/annotation/: annotate_page.dart  annotation.dart  annotation.freezed.dart  annotation.g.dart  annotation_network_repository.dart  annotation_service.dart  annotations_page.dart
mobile/lib/src/connectivity/: connectivity.dart
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/web/: index.html
mobile/windows/runner/: Runner.rc  main.cpp
(+12 files in other folders)
